[package]
name = "piproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait="0.1"
bstr = { version = "1.9.1", default-features = false }
bytes = "1.6.0"
log = "0.4.21"
once_cell = "1.19.0"
parse-size = "1.0.0"
paste = "1.0.15"
pingora = { version = "0.2", features = [ "proxy", "cache" ] }
rmp-serde = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
xflags = "0.3.2"

[profile.release-min]
inherits = "release"
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable LTO
codegen-units = 1 # Can enable additional optimizations
