[package]
name = "piproxy"
version = "0.1.3"
edition = "2021"

[dependencies]
async-trait="0.1"
blake2 = "0.10.6"
bstr = { version = "1.9.1", default-features = false }
bytes = "1.6.0"
clap = { version = "4.5.8", features = ["derive"] }
const-hex = "1.12.0"
http = "1.1.0"
log = { version = "0.4.21", features = ["serde"] }
once_cell = "1.19.0"
parse-size = "1.0.0"
paste = "1.0.15"
pingora = { version = "0.2", features = ["proxy", "cache"] }
prometheus = { version = "0.13.4", features = ["process"] }
rmp-serde = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_yaml = "0.8"
systemd-journal-logger = "2.1.1"
timeout-readwrite = "0.3.3"
tokio = { version = "1", features = ["rt", "fs", "time"] }

[profile.profiling]
inherits = "release"
debug = true

[profile.prod]
inherits = "release"
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable LTO
codegen-units = 1 # Can enable additional optimizations
